[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pointer.tscn" type="PackedScene" id=1]
[ext_resource path="res://CubeGame2.gd" type="Script" id=2]
[ext_resource path="res://LineRenderer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="Environment" id=3]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5

[node name="CubeGame2" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, -0.211309, 0.453154, 0, 0.906308, 0.422618, -0.5, -0.365998, 0.784886, 0, 0, 0 )
light_energy = 0.5

[node name="LineRenderer" parent="." instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
mouse_filter = 2

[node name="MoveCounter" type="Label" parent="Control"]
margin_left = 1177.0
margin_top = 31.0
margin_right = 1330.0
margin_bottom = 77.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Moves: 0"

[node name="WinMessage" type="Label" parent="Control"]
visible = false
margin_left = 336.0
margin_top = 502.0
margin_right = 670.0
margin_bottom = 596.0
text = "Well done!"
align = 1
valign = 1

[node name="UndoButton" type="Button" parent="Control"]
margin_left = 1177.0
margin_top = 174.0
margin_right = 1318.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 5 )
text = "(B) Undo"

[node name="ResetButton" type="Button" parent="Control"]
margin_left = 1177.0
margin_top = 77.0
margin_right = 1318.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 5 )
text = "(X) Reset"

[node name="QuitButton" type="Button" parent="Control"]
margin_left = 1177.0
margin_top = 277.0
margin_right = 1318.0
margin_bottom = 345.0
custom_fonts/font = ExtResource( 5 )
text = "(Y) Quit to title"

[node name="Control Message" type="Label" parent="Control"]
margin_left = 1177.0
margin_top = 375.0
margin_right = 1318.0
margin_bottom = 548.0
custom_fonts/font = SubResource( 4 )
text = "Slide the rings to matching colored corner!
Make moves with the Mouse or with the (A) Button of your controller.
"
align = 1
valign = 1
autowrap = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Pointer" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="Control/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="Control/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Control/QuitButton" to="." method="_on_QuitButton_pressed"]
